# bosque

./: .gitignore  Cargo.toml  README.md  build.jl  build.rs  generator.jl  makefile
benches/: deserialize.rs  tree.rs
bosque/: Cargo.toml  build.rs
bosque/benches/: tree.rs
bosque/src/: float.rs  mirror_select.rs  tree.rs
bosque/tests/: brute_force.rs  brute_force_k.rs
c/: abacus_mock.c  bosque.h  bosque.hpp  mock_tree.c
examples/: abacus_mock.jl  abacus_mock.rs  abacus_round_trip_compress.rs  api.jl  bosque.h  bosque.hpp  cpf32_kiddo_large.rs  cpf32_kiddo_mini.rs  cpf32_mock.rs  cpf32_poc.rs  deps.jl  f32_poc.rs  mock_tree.rs
examples/c/: README.md  abacus_mock.c  bosque.h  bosque.hpp
examples/julia/: README.md  abacus_mock.jl  api.jl  generator.jl  generator.toml
examples/python/: README.md  comparison.py  simple.py
examples/rust/: simple.rs
py/: Cargo.toml  pyproject.toml
py/src/: lib.rs
src/: abacussummit.rs  cast.rs  float.rs  lib.rs  likely_stable.rs  mirror_select.rs  tree.rs  treef32.rs
tests/: brute_force.rs  brute_force_k.rs
