[package]
name = "bosque"
version = "0.1.0"
edition = "2021"
description = "A very fast in-place kdtree library"
license = "Apache-2.0 OR MIT"
authors = ["Cavey Cool <caveycool@gmail.com>"]

[lib]
# crate-type = ["lib", "staticlib"] # Creates static lib
crate-type = ["lib", "cdylib"] # Creates dynamic lib

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
rayon = { version = "1.7.0", optional = true }

[build-dependencies]
cbindgen = { version = "0.24.3", default-features = false }

[dev-dependencies]
criterion = "0.5.0"
num-format = "0.4.4"
rand = "0.8.5"
rayon = "1.7.0"

#[[bench]]
#name = "deserialize"
#harness = false

[[bench]]
name = "tree"
harness = false


[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
