[package]
name = "bosque"
version = "0.2.0"
edition = "2021"
description = "A very fast in-place kdtree library"
license = "Apache-2.0 OR MIT"
authors = ["Cavey Cool <caveycool@gmail.com>"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"] # Creates dynamic lib

[features]
default = ["parallel", "sqrt-dist"]
sqrt-dist = []
parallel = ["rayon"]

[dependencies]
rayon = { version = "1.7.0", optional = true }

[build-dependencies]
cbindgen = { version = "0.24.3", default-features = false }

[dev-dependencies]
criterion = "0.5.0"
num-format = "0.4.4"
rand = "0.8.5"
rayon = "1.7.0"

[[bench]]
name = "tree"
harness = false

[[example]]
name = "simple"
path = "../examples/rust/simple.rs"

[[example]]
name = "abacus_mock"
path = "../examples/rust/abacus_mock.rs"

[[example]]
name = "abacus_round_trip_compress"
path = "../examples/rust/abacus_round_trip_compress.rs"
