[package]
name = "pybosque"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pybosque"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.19.0"
pyo3 = { version = "0.19", features = ["extension-module"] }
bosque = { workspace = true }
rayon = "1.7.0"
